# simple-steps-core

./: .gitignore  README.md  pyproject.toml  runme.py
docs/: integration.md
examples/: simple_steps_core_walkthrough.ipynb
examples/api_server/: README.md  __init__.py  app.py  operations.py  store.py
scripts/: run_checks.sh
src/simple_steps_core/: __init__.py
src/simple_steps_core/agent/: __init__.py  service.py  types.py
src/simple_steps_core/api/: __init__.py  decorators.py  public.py
src/simple_steps_core/domain/: __init__.py  formulas.py  models.py  references.py  safe_formula.py
src/simple_steps_core/execution/: __init__.py  context.py  engine.py  resolver.py  session_io.py  session_manager.py  workflow.py
src/simple_steps_core/operations/: __init__.py  orchestrations.py  registry.py  validation.py
src/simple_steps_core/packs/: __init__.py  loader.py
tests/integration/: test_engine_execute.py  test_workflow.py
tests/unit/: test_formula_roundtrip.py  test_operation_modes.py  test_orchestrations.py  test_references.py  test_registry.py  test_resolver.py  test_session_io.py  test_session_manager.py  test_validation.py
