[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-steps-core"
version = "0.1.0"
description = "Core runtime for tool-first workflow execution"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Simple Steps" }
]
keywords = ["workflow", "orchestration", "backend", "tool-calls", "formula"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries"
]
# Pydantic is the one core runtime dependency: it powers model validation,
# serialization (save/load of workflows), and argument schema generation.
dependencies = [
  "pydantic>=2.6",
]

[project.optional-dependencies]
agent = [
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0"
]
examples = [
  "notebook>=7.6.0",
  "ipywidgets>=8.1.0"
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "build",
  "twine"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
